<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cadastro Conta</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="nome">Nome completo</string>
    <string name="cpf">CPF</string>
    <string name="cartao_credito">Cartão de crédito</string>
    <string name="talao_cheques">Talão de cheques</string>
    <string name="seguro_cartao">Seguro do cartão</string>
    <string name="confirma">Confirma</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="conta_corrente">Conta corrente</string>
    <string name="conta_poupanca">Conta poupança</string>
    <string name="conta_salario">Conta salário</string>
    <string name="tipo_conta">Tipo de conta</string>

</resources>
